--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 
     <meta name="theme-color" content="#4c6500">
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/png" sizes="32x30" href="/faviconv.png" />
+
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
    
